captureのoutputをstillImageにしてアルバムに保存処理

--- a/CameraDemo/Base.lproj/Main.storyboard
+++ b/CameraDemo/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="shutterCamera:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Dsu-P6-o8b"/>
+                                    <action selector="takePhoto:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Cbe-2O-CVb"/>
                                 </connections>
                             </button>
                             <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kwb-8l-tPk">
